--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Novem Evolution</title>
     <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
-<body>
+<body class="body">
     <div id="grilla__index">
         <header class="header">
             <a href="#"><img class="header__logo" src="./assets/imagenes/logo.png" alt="logo"></a>
@@ -39,18 +39,18 @@
                 <p class="articulos__titulos">IoT -Internet de las cosas</p>
                 <p class="articulos">Soluciones en Tableros de Control, Dispositivos con</p>
                 <p class="articulos">conectividad, Desarrollo de monitoreo y controles a medida </p>
-                <img class="articulos__imagen" src="./assets/imagenes/iot.jpg" alt="IoT" width="300" height="300" > 
+                <img class="articulos__imagen" src="./assets/imagenes/iot.jpg" alt="IoT" width="290" height="290" > 
             </article>
             <article class="article__2">
                 <p class="articulos__titulos">Desarrollo Web</p>
                 <p class="articulos">Diseño de Aplicaciones Web, Mobile, Base de Datos</p>
-                <img class="articulos__imagen" src="./assets/imagenes/develop.png" alt="Desarrollo Web" width="300" height="300">
+                <img class="articulos__imagen" src="./assets/imagenes/develop.png" alt="Desarrollo Web" width="290" height="290">
             </article>
             <article class="article__3">
                 <p class="articulos__titulos">Desarrollo de Hardware</p>
                 <p class="articulos">Soluciones a gran escala basadas en Raspberry Pi</p>
                 <p class="articulos">y soluciones básicas basadas en Arduino</p>
-                <img class="articulos__imagen" src="./assets/imagenes/arduino.jpg" alt="Desarrollo de Hardware" width="300" height="300">
+                <img class="articulos__imagen" src="./assets/imagenes/arduino.jpg" alt="Desarrollo de Hardware" width="290" height="290">
             </article>
             
         </section>
