--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../assets/css/estilos.css">
        
     </head>
-<body>
+<body class="body"> 
     <header class="header">
        
         <a href="../index.html"><img class="header__logo" src="../assets/imagenes/logo.png" alt="logo"></a>
@@ -18,8 +18,8 @@
                 <li class="nav__menu__item"><a class="nav__menu__link" href="../index.html">Inicio</a></li>
                 <li class="nav__menu__item"><a class="nav__menu__link" href="../pages/nosotros.html">Nosotros</a></li>
                 <li class="nav__menu__item"><a class="nav__menu__link" href="../pages/servicios.html">Servicios</a></li>
-                <li class="nav__menu__item"><a class="nav__menu__link" href="#">Clientes</a></li>
-                <li class="nav__menu__item"><a class="nav__menu__link" href="../pages/contacto.html">Contacto</a></li>
+                <li class="nav__menu__item"><a class="nav__menu__link" href="../pages/clientes.html">Clientes</a></li>
+                <li class="nav__menu__item"><a class="nav__menu__link" href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
