modificaciones de prueba

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
                 <p class="articulos__titulos">IoT -Internet de las cosas</p>
                 <p class="articulos">Soluciones en Tableros de Control, Dispositivos con</p>
                 <p class="articulos">conectividad, Desarrollo de monitoreo y controles a medida </p>
-                <img class="articulos__imagen" src="./assets/imagenes/iot.jpg" alt="IoT" width="290" height="290" > 
+                <img class="articulos__imagen" src="./assets/imagenes/iot.jpg" alt="IoT"> 
             </article>
             <article class="article__2">
                 <p class="articulos__titulos">Desarrollo Web</p>
                 <p class="articulos">Diseño de Aplicaciones Web, Mobile, Base de Datos</p>
-                <img class="articulos__imagen" src="./assets/imagenes/develop.png" alt="Desarrollo Web" width="290" height="290">
+                <img class="articulos__imagen" src="./assets/imagenes/develop.png" alt="Desarrollo Web">
             </article>
             <article class="article__3">
                 <p class="articulos__titulos">Desarrollo de Hardware</p>
                 <p class="articulos">Soluciones a gran escala basadas en Raspberry Pi</p>
                 <p class="articulos">y soluciones básicas basadas en Arduino</p>
-                <img class="articulos__imagen" src="./assets/imagenes/arduino.jpg" alt="Desarrollo de Hardware" width="290" height="290">
+                <img class="articulos__imagen" src="./assets/imagenes/arduino.jpg" alt="Desarrollo de Hardware">
             </article>
             
         </section>
