--- a/index.html
+++ b/index.html
@@ -42,10 +42,45 @@
       <div class="row">
         <div class="col">
           <section class="hero">
-            <div class="hero__conte">
-                <h1>n o v e m</h1>
-                <p>Evolucionamos junto a vos!</p>
-            </div> 
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./assets/imagenes/imagen1920x808.webp" class="d-block w-100" alt="..." height="250">
+                  <div class="carousel-caption  d-md-block">
+                    <h1>n o v e m</h1>
+                    <p>Evolucionamos junto a vos!</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/imagenes/imagen1.jpg" class="d-block w-100" alt="..." height="250">
+                  <div class="carousel-caption d-md-block">
+                    <h1>n o v e m</h1>
+                    <p>Evolucionamos junto a vos!</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/imagenes/imagen2.jpg" class="d-block w-100" alt="..." height="250">
+                  <div class="carousel-caption d-md-block">
+                    <h1>n o v e m</h1>
+                    <p>Evolucionamos junto a vos!</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+              </button>
+            </div>
+          
         </section>
         </div>
       </div>
