--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
               <label for="exampleInputMensaje1" class="form-label">Mensaje</label>
               <input type="mensaje" class="form-control" id="exampleInputMensaje1">
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button id="submit" type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>       
         
