--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Novem Evolution</title>
+    <title>Novem - Contacto</title>
+    <meta name="description" content="Desarrollo de hardware y software. Pensado en el futuro y en constante evolución, creando herramientas únicas en el mercado.Servicios de desarrollo de hardware y software, aplicaciones web, internet de las cosas">
+    <meta name="keywords" content="Arduino, Raspberry, Android, Iot, HTML"> 
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilossass.css">
@@ -41,7 +44,7 @@
  
     <main class="main" style="height: 72vh;">
         
-        <h2>Formulario de Contacto</h2>
+        <p class="tituloForm">Formulario de Contacto</p>
         <div class="container-fluid ">
           <form class="formulario">
             <div class="mb-3">
@@ -58,7 +61,8 @@
               <label for="exampleInputMensaje1" class="form-label">Mensaje</label>
               <input type="mensaje" class="form-control" id="exampleInputMensaje1">
             </div>
-            <button id="submit" type="submit" class="btn btn-primary">Enviar</button>
+            <button id="reset" type="reset" class="boton--limpiar">Limpiar</button>
+            <button id="submit" type="submit" class="boton--enviar">Enviar</button>
           </form>
         </div>       
         
