--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Novem Evolution</title>
+    <title>Novem - Servicios</title>
+    <meta name="description" content="Desarrollo de hardware y software. Pensado en el futuro y en constante evolución, creando herramientas únicas en el mercado.Servicios de desarrollo de hardware y software, aplicaciones web, internet de las cosas">
+    <meta name="keywords" content="Arduino, Raspberry, Android, Iot, HTML"> 
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilossass.css">
