--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,12 @@
     <title>Novem - Nosotros</title>
     <meta name="description" content="Desarrollo de hardware y software. Pensado en el futuro y en constante evolución, creando herramientas únicas en el mercado.Servicios de desarrollo de hardware y software, aplicaciones web, internet de las cosas">
     <meta name="keywords" content="Arduino, Raspberry, Android, Iot, HTML"> 
-
+    <!-- OpenGraph -->
+    <meta property="og:url" content="http://www.novem.com.ar"/>
+    <meta property="og:title" content="Novem - Nosotros"/>
+    <meta property="og:image" content="https://www.novem.com.ar/assets/imagenes/logo.png"/>
+    <meta property="og:description" content="Desarrollo de hardware y software. Pensado en el futuro y en constante evolución, creando herramientas únicas en el mercado.Servicios de desarrollo de hardware y software, aplicaciones web, internet de las cosas"/>
+    <meta property="og:type" content="website"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilossass.css">
