--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mg-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -37,7 +37,7 @@
               <a class="nav-link" href="./servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Clientes</a>
+              <a class="nav-link active" aria-current="page" href="#">Clientes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contacto.html">Contacto</a>
