--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mg-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -40,7 +40,7 @@
               <a class="nav-link" href="./clientes.html">Clientes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link active" aria-current="page" href="#">Contacto</a>
             </li>
           </ul>
         </div>
