--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         </div>
       </div>
     </nav>
+    
     <div class="conteiner-fluid">
-      <div class="row">
+      <div>
         <div class="col">
           <section class="hero">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -103,7 +104,7 @@
         </section>
         </div>
       </div>
-      <div class="row">
+      <div>
         <div class="col" data-aos="fade-right">
           <article class="article__1">
             <p class="articulos__titulos">IoT -Internet de las cosas</p>
@@ -128,7 +129,7 @@
         </article> 
         </div>
       </div>
-      <div class="row">
+      <div>
         <div class="col">
           <footer class="footer">
             <p>info@novem.com.ar</p>
@@ -145,9 +146,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
- <script>
-    AOS.init();
- </script>
+    <script>
+          AOS.init();
+    </script>
 
   </body>
 </html>
